Completed refinement of Dockerfile